--- a/index.html
+++ b/index.html
@@ -15,49 +15,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="css/headers.css">
-    <link rel="stylesheet" type="text/css" href="css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="css/toolbars.css">
     <title>Firefox OS Boilerplate App</title>
-        <!-- Localization -->
-    <link rel="resource" type="application/l10n" href="locales/locales.ini" />
-    <script type="application/javascript" src="js/l10n.js"></script>
     <base target="_blank">
 </head>
 
 <body>
 
-    <section role="region">
-        <header>
-            <!-- Icon that will indicate whether you are online or offline - enabled if you are using offline/appcache (see above) -->
-            <div id="online-status" title="Online"></div>
-            <menu type="toolbar">
-                <button id="install"><span class="icon icon-add">add</span></button>
-            </menu>
-            <h1 data-l10n-id="app-heading">
-                Firefox OS Boilerplate App
-            </h1>
-        </header>
-    </section>
-
-    </div>
-
-    <footer>
-        <div role="toolbar">
-            <ul>
-                <li><button id="reload" class="update" data-l10n-id="update-button">Update</button></li>
-            </ul>
-        </div>
-    </footer>
-
-    <script type="text/javascript" src="js/base.js"></script>
-    <script type="text/javascript" src="js/webapp.js"></script>
-    <script type="text/javascript" src="js/offline.js"></script>
-
-    <!--
-        Loosely based on fxosstub: https://github.com/Jaxo/fxosstub
-    -->
+    
+<h1>test</h1>
 
 </body>
 </html>
