--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   <section role="region" id="miam-selection" data-position="right">
     <header class="fixed">
       <a  class="btn-back" href="#"><span class="icon icon-back">retour</span></a>
-      <h1>Vos Bananes !</h1>
+      <h1>Hello, <span data-bind="text: user"></span></h1>
     </header>
 
     <article class="content scrollable header">
