add Azure config

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <!-- Additional markup to make Building Blocks kind of cross browser -->
     <link rel="stylesheet" href="cross_browser.css">
     <link rel="stylesheet" href="/style/custom.css" />
+
+    <script src="https://monkeystockmarket.azure-mobile.net/client/MobileServices.Web-1.0.0.min.js"></script>
+
     <style>
         #index {
             height: 100%;
