--- a/index.html
+++ b/index.html
@@ -262,11 +262,10 @@
     <article class="content scrollable header">
       <section data-type="list">
 
-
       <div data-bind="foreach: categories">
         <header data-bind="text: title"></header>
         <ul data-bind="foreach: items">
-          <li>
+          <li data-bind="click: $root.taMere">
             <p data-bind="text: label"></p>
             <p data-bind="text: price"></p>
         </ul>
