--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <div data-bind="foreach: categories">
         <header data-bind="text: title"></header>
         <ul data-bind="foreach: items">
-          <li data-bind="click: $root.taMere">
+          <li data-bind="click: $root.askConfirmation">
             <p data-bind="text: label"></p>
             <p data-bind="text: price"></p>
         </ul>
@@ -275,37 +275,20 @@
     </article>
   </section>
 
-
+  <section id="confirm-dialog" data-position="back" class="fullscreen">
+    <form role="dialog" data-type="confirm">
+      <section>
+        <h1>Confirmation</h1><!-- this heading is optional -->
+        <p>T'as vraiment ingurgité ça ?</p>
+      </section>
+      <menu>
+        <button class="cancel-confirmation">Nan.</button>
+        <button class="recommend confirm-confirmation">Oui</button>
+      </menu>
+    </form>
+  </section>
     <script type="text/javascript" defer src="js/status.js"></script>
     <script type="text/javascript" defer src="js/seekbars.js"></script>
-    <script>
-        /*var mobile = (navigator.userAgent.search("Mobile") != -1);
-        if ( mobile ) {
-          //Let's reduce font-size when in landscape
-          //fs: current font-size
-          var fs = parseInt(window.getComputedStyle(document.documentElement).getPropertyValue( 'font-size' ), 10);
-          var mql = window.matchMedia("(orientation: portrait)");
-
-          if(mql.matches) { //portrait
-            document.documentElement.style.fontSize = fs + 'px';
-            document.body.classList.remove('landscape');
-          } else { // landscape
-            document.documentElement.style.fontSize = fs * 0.7 + 'px';
-            document.body.classList.add('landscape');
-          }
-
-          mql.addListener(function(m) {
-            if(m.matches) { //portrait
-              document.documentElement.style.fontSize = fs + 'px';
-              document.body.classList.remove('landscape');
-            }
-            else { //landscape
-              document.documentElement.style.fontSize = fs * 0.7 + 'px';
-              document.body.classList.add('landscape');
-            }
-          });
-        }*/
-    </script>
     <script type="text/javascript" defer src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" defer src="js/knockout-3.0.0.js"></script>
     <script type="text/javascript" defer src="js/app.js"></script>
