--- a/index.html
+++ b/index.html
@@ -204,23 +204,12 @@
 <body>
     <section id="index" data-position="current">
         <section data-type="sidebar">
-            <header>
-                <menu type="toolbar">
-                    <a href="#">Done</a>
-                </menu>
-                <h1>Drawer demo</h1>
-            </header>
             <nav>
+                <h2>Le Top des gros</h2>
                 <ul>
-                    <li><a href="#">item 1</a></li>
-                    <li><a href="#">item 2</a></li>
-                    <li><a href="#">item 3</a></li>
-                </ul>
-                <h2>This is a subtitle</h2>
-                <ul>
-                    <li><a href="#">item 4</a></li>
-                    <li><a href="#">item 5</a></li>
-                    <li><a href="#">item 6</a></li>
+                    <li><a href="#">Gil (43.20 €)</a></li>
+                    <li><a href="#">Aurels (28.45 €)</a></li>
+                    <li><a href="#">Francois[0] (10 €)</a></li>
                 </ul>
             </nav>
         </section>
