--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div data-type="list" class="user-list">
                     <ul data-bind="foreach: users">
                         <li>
-                            <a class="btn-user" href="#" data-bind="click: $root.showUser, attr: {'id': id}">
+                            <a class="btn-user" href="#" data-bind="click: $root.showUser, attr: {'id': userid}">
                                 <img data-bind="attr: {'src': picture}"/>
                                 <p data-bind="text: name"></p>
                             </a>
