--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"><!--<meta charset="utf-8">-->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Building blocks test</title>
     <!-- Building blocks -->
@@ -205,6 +205,12 @@
     <section id="index" data-position="current">
         <section data-type="sidebar">
             <nav>
+                <h2>Commandes</h2>
+                <ul>
+                    <li><a href="#">Retour à l'accueil</a></li>
+                    <li><a href="#">A propos</a></li>
+                    
+                </ul>
                 <h2>Le Top des gros</h2>
                 <ul>
                     <li><a href="#">Gil (43.20 €)</a></li>
@@ -225,7 +231,7 @@
                     <ul data-bind="foreach: users">
                         <li>
                             <a class="btn-user" href="#" data-bind="click: $root.showUser, attr: {'id': userid}">
-                                <img data-bind="attr: {'src': picture}" />
+                                <img data-bind="attr: {'src': picture}"/>
                                 <p data-bind="text: name"></p>
                             </a>
                         </li>
@@ -234,41 +240,42 @@
             </article>
         </section> <!-- end drawer -->
     </section> <!-- end index -->
+
     <!--···························· Monkey Miam ····························-->
-    <section role="region" id="miam-selection" data-position="right">
-        <header class="fixed">
-            <a class="btn-back" href="#"><span class="icon icon-back">retour</span></a>
-            <h1>Hello, <span data-bind="text: username"></span></h1>
-        </header>
+  <section role="region" id="miam-selection" data-position="right">
+    <header class="fixed">
+      <a  class="btn-back" href="#"><span class="icon icon-back">retour</span></a>
+      <h1>Hello, <span data-bind="text: user"></span></h1>
+    </header>
 
-        <article class="content scrollable header">
-            <section data-type="list">
+    <article class="content scrollable header">
+      <section data-type="list">
 
-                <div data-bind="foreach: categories">
-                    <header data-bind="text: title"></header>
-                    <ul data-bind="foreach: items">
-                        <li data-bind="click: $root.askConfirmation">
-                            <p data-bind="text: label"></p>
-                            <p data-bind="text: price"></p>
-                    </ul>
-                </div>
+      <div data-bind="foreach: categories">
+        <header data-bind="text: title"></header>
+        <ul data-bind="foreach: items">
+          <li data-bind="click: $root.askConfirmation">
+            <p data-bind="text: label"></p>
+            <p data-bind="text: price"></p>
+        </ul>
+      </div>
 
-            </section>
-        </article>
-    </section>
+      </section>
+    </article>
+  </section>
 
-    <section id="confirm-dialog" data-position="back" class="fullscreen">
-        <form role="dialog" data-type="confirm">
-            <section>
-                <h1>Confirmation</h1><!-- this heading is optional -->
-                <p>T'as vraiment mangé ça ?</p>
-            </section>
-            <menu>
-                <button class="cancel-confirmation">Nan</button>
-                <button class="recommend confirm-confirmation">Oui</button>
-            </menu>
-        </form>
-    </section>
+  <section id="confirm-dialog" data-position="back" class="fullscreen">
+    <form role="dialog" data-type="confirm">
+      <section>
+        <h1>Confirmation</h1><!-- this heading is optional -->
+        <p>T'as vraiment mangé ça ?</p>
+      </section>
+      <menu>
+        <button class="cancel-confirmation">Nan</button>
+        <button class="recommend confirm-confirmation">Oui</button>
+      </menu>
+    </form>
+  </section>
     <script type="text/javascript" defer src="js/status.js"></script>
     <script type="text/javascript" defer src="js/seekbars.js"></script>
     <script type="text/javascript" defer src="js/jquery-2.0.3.min.js"></script>
