--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <section id="index" data-position="current">
         <section data-type="sidebar">
             <nav>
-                <h2>Commandes</h2>
+                <h2>Menu</h2>
                 <ul>
                     <li><a href="#">Retour à l'accueil</a></li>
                     <li><a href="#">A propos</a></li>
