--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
             <nav>
                 <h2>Menu</h2>
                 <ul>
-                    <li><a href="#">Retour à l'accueil</a></li>
-                    <li><a href="#">A propos</a></li>
+                    <li><a href="#drawer"><span class="icon icon-home">Retour à l'accueil</a></li>
+                    <li><a href="#about">A propos</a></li>
                     
                 </ul>
                 <h2>Le Top des gros</h2>
@@ -239,6 +239,18 @@
                 </div>
             </article>
         </section> <!-- end drawer -->
+        <!-- START ABOUT -->
+        <section id="about" role="region">
+            <header class="fixed">
+                <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+                <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+                <h1>Monkeys Stock <em>beta</em></h1>
+            </header>
+            <article class="content scrollable header">
+                <h1>A propos</h1>
+                <p>Bonjour</p>
+            </article>
+        </section> <!-- Stop About -->
     </section> <!-- end index -->
 
     <!--···························· Monkey Miam ····························-->
