--- a/index.html
+++ b/index.html
@@ -239,18 +239,7 @@
                 </div>
             </article>
         </section> <!-- end drawer -->
-        <!-- START ABOUT -->
-        <section id="about" role="region">
-            <header class="fixed">
-                <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
-                <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
-                <h1>Monkeys Stock <em>beta</em></h1>
-            </header>
-            <article class="content scrollable header">
-                <h1>A propos</h1>
-                <p>Bonjour</p>
-            </article>
-        </section> <!-- Stop About -->
+
     </section> <!-- end index -->
 
     <!--···························· Monkey Miam ····························-->
@@ -288,6 +277,36 @@
       </menu>
     </form>
   </section>
+      <section id="about" data-position="current">
+        <section data-type="sidebar">
+            <nav>
+                <h2>Menu</h2>
+                <ul>
+                    <li><a href="#drawer"><span class="icon icon-home">Retour à l'accueil</a></li>
+                    <li><a href="#about">A propos</a></li>
+                    
+                </ul>
+                <h2>Le Top des gros</h2>
+                <ul>
+                    <li><a href="#">Gil (43.20 €)</a></li>
+                    <li><a href="#">Aurels (28.45 €)</a></li>
+                    <li><a href="#">Francois[0] (10 €)</a></li>
+                </ul>
+            </nav>
+        </section>
+        <section id="drawer" role="region">
+            <header class="fixed">
+                <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+                <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+                <h1>Monkeys Stock <em>beta</em></h1>
+            </header>
+            <article class="content scrollable header">
+                <h1>Qui es-tu?</h1>
+                <p>bonjour</p></p>
+            </article>
+        </section> <!-- end drawer -->
+
+    </section> <!-- end index -->
     <script type="text/javascript" defer src="js/status.js"></script>
     <script type="text/javascript" defer src="js/seekbars.js"></script>
     <script type="text/javascript" defer src="js/jquery-2.0.3.min.js"></script>
