--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       </menu>
     </form>
   </section>
-      <section id="about" data-position="current">
+      <section id="about" >
         <section data-type="sidebar">
             <nav>
                 <h2>Menu</h2>
@@ -294,15 +294,15 @@
                 </ul>
             </nav>
         </section>
-        <section id="drawer" role="region">
+        <section id="drawer2" role="region">
             <header class="fixed">
                 <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
-                <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+                <a href="#drawer2"><span class="icon icon-menu">show sidebar</span></a>
                 <h1>Monkeys Stock <em>beta</em></h1>
             </header>
             <article class="content scrollable header">
-                <h1>Qui es-tu?</h1>
-                <p>bonjour</p></p>
+                <h1>Bonjour</h1>
+                <p>Vous êtes sur la section "A propos"</p>
             </article>
         </section> <!-- end drawer -->
 
