--- a/index.html
+++ b/index.html
@@ -277,27 +277,10 @@
       </menu>
     </form>
   </section>
-      <section id="about" >
-        <section data-type="sidebar">
-            <nav>
-                <h2>Menu</h2>
-                <ul>
-                    <li><a href="#drawer"><span class="icon icon-home">Retour à l'accueil</a></li>
-                    <li><a href="#about">A propos</a></li>
-                    
-                </ul>
-                <h2>Le Top des gros</h2>
-                <ul>
-                    <li><a href="#">Gil (43.20 €)</a></li>
-                    <li><a href="#">Aurels (28.45 €)</a></li>
-                    <li><a href="#">Francois[0] (10 €)</a></li>
-                </ul>
-            </nav>
-        </section>
-        <section id="drawer2" role="region">
+      <section id="about" class="fullscreen" >
+       
+        <section id="drawer2">
             <header class="fixed">
-                <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
-                <a href="#drawer2"><span class="icon icon-menu">show sidebar</span></a>
                 <h1>Monkeys Stock <em>beta</em></h1>
             </header>
             <article class="content scrollable header">
