--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <ul>
                     <li><a href="#drawer"><span class="icon icon-home">Retour à l'accueil</a></li>
                     <li><a href="#about">A propos</a></li>
-                    
+
                 </ul>
                 <h2>Le Top des gros</h2>
                 <ul>
@@ -246,7 +246,7 @@
   <section role="region" id="miam-selection" data-position="right">
     <header class="fixed">
       <a  class="btn-back" href="#"><span class="icon icon-back">retour</span></a>
-      <h1>Hello, <span data-bind="text: user"></span></h1>
+      <h1>Hello, <span data-bind="text: username"></span></h1>
     </header>
 
     <article class="content scrollable header">
@@ -287,7 +287,7 @@
                 <ul>
                     <li><a href="#drawer"><span class="icon icon-home">Retour à l'accueil</a></li>
                     <li><a href="#about">A propos</a></li>
-                    
+
                 </ul>
                 <h2>Le Top des gros</h2>
                 <ul>
