--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <p>T'as vraiment mangé ça ?</p>
       </section>
       <menu>
-        <button class="cancel-confirmation">Nan</button>
+        <button class="cancel-confirmation">Nooon</button>
         <button class="recommend confirm-confirmation">Oui</button>
       </menu>
     </form>
@@ -284,8 +284,12 @@
 
 
 
-  <section id="about" data-position="back" class="fullscreen">
-
+  <section id="about" data-position="current" role="region">
+            <header class="fixed">
+                <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+                <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+                <h1>Monkeys Stock <em>beta</em></h1>
+            </header>
       <section>
         <h1>A propos</h1><!-- this heading is optional -->
         <p></p>
