Test commit Github Mac

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <h1>Monkeys Stock <em>beta</em></h1>
             </header>
       <section>
-        <h1>A propos</h1><!-- this heading is optional -->
+        <h1>test</h1><!-- this heading is optional -->
         <p></p>
       </section>
 
